codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__terminal_styles__analytics_light_business_3.snap
---
source: tui/src/analytics/styles_tests.rs
assertion_line: 145
expression: snapshot
---
120x42
Text:
"  Analytics  ·  Live account                                                                                            "
"  [7d]  30d  ·  Aug 27–Sep 2, 2026                                                                                      "
"                                                                                                                        "
"  1 Summary  [2 Credits usage history]  3 Token usage history  4 Plugins called  5 Skills used  6 Top chats             "
"                                                                                                                        "
"  ▎ Credits usage history                                                                                   By product  "
"  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  17.2K credits                                                                                                         "
"                                                                                                                        "
"     5K                                                                                                                 "
"                                                                                         4,360.00                       "
"                                                                                         ▄▄▄▄▄▄▄▄▄▄                     "
"                                                                                         ██████████                     "
"                                                                                         ██████████                     "
"                                                          3,400.00                       ██████████                     "
"                                                         ▇▇▇▇▇▇▇▇▇▇      3,000.00        ██████████                     "
"                                                         ██████████      ▃▃▃▃▃▃▃▃▃▃      ██████████                     "
"                                                         ██████████      ██████████      ██████████      2,560.00       "
"   2.5K                                   2,280.00       ██████████      ██████████      ██████████      ▅▅▅▅▅▅▅▅▅▅     "
"                                          ▅▅▅▅▅▅▅▅▅▅     ██████████      ██████████      ██████████      ██████████     "
"                          1,640.00        ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ▁▁▁▁▁▁▁▁▁▁      ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"                          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"               0          ██████████      ██████████     ██████████      ██████████      ██████████      ██████████     "
"      0 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"                                                                                                             ▲          "
"            Aug 27         Aug 28          Aug 29          Aug 30         Aug 31           Sep 1           Sep 2        "
"                                                                                                                        "
"  ────────────────────────────────────────────────────────                                                              "
"  Sep 2 · 2,560.00 credits                                                                                              "
"  Product                                          Credits                                                              "
"  ● CLI                                             920.00                                                              "
"  ● Desktop app                                     880.00                                                              "
"  ● IDE extension                                   400.00                                                              "
"  ● Web                                             360.00                                                              "
"                                                                                                                        "
"  tab/1–6 section · z dashboard · ←/→ day · enter details                                                               "
"  r 7/30d · R refresh · esc back · q close                                                                              "
Palette (foreground|background|underline|modifiers):
0: Reset|Reset|Reset|NONE
1: Reset|Reset|Reset|BOLD
2: Rgb(76, 76, 76)|Reset|Reset|NONE
3: Rgb(0, 95, 135)|Reset|Reset|BOLD
4: Reset|Reset|Reset|DIM
5: Green|Reset|Reset|NONE
6: Magenta|Reset|Reset|NONE
7: Cyan|Reset|Reset|NONE
8: Rgb(0, 95, 135)|Reset|Reset|BOLD | UNDERLINED
9: Black|Reset|Reset|BOLD
Rows (column:palette):
0: 0:0 2:1 11:2 28:0
1: 0:0 2:3 6:0 11:2 34:0
2: 0:0
3: 0:0 2:2 13:3 40:2 107:0
4: 0:0
5: 0:0 2:3 25:0 108:2 118:0
6: 0:0 2:4 118:0
7: 0:0 2:3 15:0
8: 0:0
9: 0:0 5:2 7:0
10: 0:0 89:4 97:0
11: 0:0
12: 0:0
13: 0:0
14: 0:0 58:4 66:0 89:5 99:0
15: 0:0 73:4 81:0 89:5 99:0
16: 0:0 89:6 99:0
17: 0:0 57:5 67:0 89:6 99:0 105:1 113:0
18: 0:0 3:2 7:0 42:4 50:0 57:5 67:0 73:5 83:0 89:6 99:0
19: 0:0 57:6 67:0 73:5 83:0 89:6 99:0
20: 0:0 26:4 34:0 57:6 67:0 73:6 83:0 89:6 99:0 105:5 115:0
21: 0:0 42:5 52:0 57:6 67:0 73:6 83:0 89:6 99:0 105:6 115:0
22: 0:0 42:6 52:0 57:6 67:0 73:6 83:0 89:7 99:0 105:6 115:0
23: 0:0 26:5 36:0 42:6 52:0 57:7 67:0 73:6 83:0 89:7 99:0 105:6 115:0
24: 0:0 26:6 36:0 42:6 52:0 57:7 67:0 73:7 83:0 89:7 99:0 105:6 115:0
25: 0:0 26:6 36:0 42:7 52:0 57:7 67:0 73:7 83:0 89:7 99:0 105:7 115:0
26: 0:0 26:7 36:0 42:7 52:0 57:7 67:0 73:7 83:0 89:7 99:0 105:7 115:0
27: 0:0 15:4 16:0 26:7 36:0 42:7 52:0 57:7 67:0 73:7 83:0 89:7 99:0 105:7 115:0
28: 0:0 6:2 7:0 8:4 118:0
29: 0:0 109:3 110:0
30: 0:0 12:2 18:0 27:2 33:0 43:2 49:0 59:2 65:0 74:2 80:0 91:2 96:0 107:8 112:0
31: 0:0
32: 0:0 2:4 58:0
33: 0:0 2:1 7:3 26:0
34: 0:0 2:1 9:0 51:1 58:0
35: 0:0 2:7 4:0
36: 0:0 2:6 4:0
37: 0:0 2:5 4:0
38: 0:0
39: 0:0
40: 0:0 2:9 9:2 20:9 21:2 34:9 37:2 44:9 49:2 118:0
41: 0:0 2:9 3:2 12:9 13:2 24:9 27:2 35:9 36:2 118:0
